--- a/frontend/src/Home/Home.module.css
+++ b/frontend/src/Home/Home.module.css
@@ -140,8 +140,8 @@ h1 {
 }
 
 .area > button:nth-of-type(2):hover {
-    background-color: #fef2f2;
-    color: #ef4444;
+    background-color: #f8fafc;
+    color: var(--primary-hover);
 }
 
 
@@ -154,7 +154,6 @@ h1 {
     align-items: center;
     gap: 15px;
     padding: 30px;
-   
     border-radius: 20px;
     backdrop-filter: blur(10px);
 }
@@ -175,7 +174,7 @@ h1 {
 
 .createButton {
     width: 100%;
-    background-color: var(--text-main);
+    background-color: var(--primary-color);
     color: white;
     padding: 12px;
     border: none;
@@ -186,7 +185,7 @@ h1 {
 }
 
 .createButton:hover {
-    background-color: #000;
+    
     transform: translateY(-2px);
 }
 
@@ -198,9 +197,12 @@ h1 {
     font-size: 0.9rem;
     cursor: pointer;
 }
+.cancelButton:hover {
+    color: var(--primary-color);
+}
 .continueButton {
-    width: 150px;
-     background-color: var(--text-main);
+    width: 40%;
+     background-color: var(--primary-color);
     color: white;
     padding: 12px;
     border: none;
@@ -208,10 +210,14 @@ h1 {
     font-weight: 700;
     cursor: pointer;
     transition: all 0.2s;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1rem;
     margin-top: 20px;
 }
 .continueButton:hover {
-    background-color: #000;
+     background-color: var(--primary-hover);
     transform: translateY(-2px);
 }
 @media (max-width: 600px) {
