--- a/frontend/src/Dashboard/Dashboard.module.css
+++ b/frontend/src/Dashboard/Dashboard.module.css
@@ -85,7 +85,7 @@
     padding: 3rem;
     border-radius: 24px;
     box-shadow: var(--shadow-md);
-    margin-bottom: 2rem;
+    
 }
 
 
@@ -145,7 +145,7 @@
 
 
 .donutChart {
-    width: 60rem;
+    width: 100%;
     height: 35rem;
     max-width: 1100px;
     background: white;
@@ -156,6 +156,30 @@
     justify-content: center;
     align-items: center;
 }
+.lastActivity {
+    width: 100%;
+    max-width: 1100px;
+    background: var(--white);
+    padding: 2rem 3rem;
+    border-radius: 24px;
+    box-shadow: var(--shadow-md);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+
+}
+.lastActivity h3 {
+    margin: 0 0 1rem 0;
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.2;
+}
+.lastActivity p {
+    font-size: 1rem;
+    color: var(--text-main);
+    margin: 0;
+}
+
 
 @media (max-width: 900px) {
     .todayAtAGlanceGrid {
@@ -171,4 +195,18 @@
         height: auto;
         padding: 2rem;
     }
+    .buttons {
+        display: flex;
+        align-items: center;
+        margin: 1rem;
+        flex-wrap: wrap;
+
+        
+       
+
+    }
+    .timeLogList {
+        padding: 0;
+    }
+    
 }
